--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   
   <div class="page">
-    href="https://shtange.github.io/catch-the-egg/" class="logo"
+    <a href="https://github.com/m1rr0xD/PEREMOGA" class="logo"></a>
     <div id="game-wrap" data-bx="0" data-by="1" data-egg-0="0" data-egg-1="0" data-egg-2="0" data-egg-3="0" data-loss="0">
 
       <div class="basket"></div>
